# sndrcv-test

./: CMakeLists.txt  README.md  run_aprun_test.sh  run_openmpi_test.sh  sndrcv-client.cc  sndrcv-srvr.cc
